--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  height: 100vh;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center ;
+  background-color: snow;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  width: 25vw;
+  height: 75vh;
+  border-radius:20px;
+  background: rgb(236, 236, 236);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  
+ }
+
+ .search {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+ }
+
+ .input {
+  margin-top: 10%;
+  width: 80%;
+  max-width: 220px;
+  height: 2%;
+  padding: 12px;
+  border-radius: 12px;
+  border: 2px solid lightgrey;
+  outline: none;
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  box-shadow: 0px 0px 20px -18px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input:hover {
+  border: 2px solid lightgrey;
+  box-shadow: 0px 0px 20px -17px;
+}
+
+.input:active {
+  transform: scale(0.95);
+}
+
+.input:focus {
+  border: 2px solid grey;
+}
+
+/* button {
+  margin-top: 11.65%;
+  margin-left: 4px;
+  border-radius: 8px;
+  background-color: white;
+  color: grey;
+  height: 2rem;
+  border: 1px solid grey;
+}
+button:hover {
+  cursor:pointer;
+} */
+
+.content {
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+
+.city {
+  font-weight: 500;
+  width:13em;
+  height: 3em;
+  text-align: center;
+  word-wrap: break-word;
+  text-transform: capitalize;
+}
+
+.temp-content {
+  display: flex;
+  justify-content: space-around;
+  
+}
+
+.temp {
+  font-weight: 400;
+  margin-left: 10px;
+  /* border-right: 2px solid black; */
+}
+
+.temp-info {
+  padding: 20px;
+  border-left: 2px solid black;
+}
+
+p {
+  text-align: center;
+  font-weight: 600 ;
 }
